--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,7 @@ scikit-learn
 keras
 numpy
 tensorflow
-nltk
+import nltk
+nltk.download('wordnet')
+nltk.download('punkt')
+nltk.download('all-corpora')
